Display paragraphs and placeholder for entity families
  - Update edit-resource CSS so entity families don't overlap the text on "smaller" screens (below 1440px)
  - Use $padding-top-page-container in page content height calculation

--- a/apps/dashboard/src/app/resources/edit/_edit-resource.tokens.scss
+++ b/apps/dashboard/src/app/resources/edit/_edit-resource.tokens.scss
@@ -2,6 +2,8 @@
 
 $height-header: rhythm(7);
 $padding-top-page-container: rhythm(6);
+$padding-horizontal-header: rhythm(6);
+$padding-horizontal-header-xlarge: rhythm(10);
 $margin-top-footer: rhythm(5);
 $padding-vertical-footer: rhythm(3);
 $footer-height: $margin-top-footer + $padding-vertical-footer * 2 + rhythm(5);
