--- a/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
+++ b/apps/dashboard/src/app/resources/edit/edit-resource.component.scss
@@ -8,11 +8,11 @@
     display: flex;
     height: $height-header;
     justify-content: space-between;
-    padding: 0 rhythm(10);
+    padding: 0 $padding-horizontal-header;
 
     .title-s {
       flex: 1 0 auto;
-      padding-left: rhythm(6);
+      padding-left: rhythm(10);
       padding-right: rhythm(1);
     }
 
@@ -33,7 +33,7 @@
       width: rhythm(32);
 
       ul {
-        padding-left: rhythm(10);
+        padding-left: $padding-horizontal-header;
       }
 
       li {
@@ -62,6 +62,10 @@
       flex: 1 0 auto;
       max-width: rhythm(90);
 
+      &.has-right-panel {
+        max-width: rhythm(64);
+      }
+
       footer {
         box-shadow: inset 0 1px 0 $color-neutral-light;
         display: flex;
@@ -79,6 +83,27 @@
         .save-actions {
           display: flex;
         }
+      }
+    }
+  }
+}
+
+@media (min-width: $size-viewport-xlarge-min) {
+  .edit-resource {
+    header {
+      padding: 0 $padding-horizontal-header-xlarge;
+
+      .title-s {
+        padding-left: rhythm(6);
+      }
+    }
+    .page-container {
+      nav ul {
+        padding-left: $padding-horizontal-header-xlarge;
+      }
+
+      .page-content.has-right-panel {
+        max-width: rhythm(90);
       }
     }
   }
