--- a/libs/sistema/theme/_pastanaga-component-overrides.scss
+++ b/libs/sistema/theme/_pastanaga-component-overrides.scss
@@ -12,6 +12,7 @@ overrides for
  */
 @import 'tokens/buttons.tokens';
 @import 'tokens/chips.tokens';
+@import 'tokens/expander.tokens';
 @import 'tokens/menu.tokens';
 @import 'tokens/popover.tokens';
 @import 'tokens/side-nav.tokens';
