--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -48,7 +48,7 @@
             routerLinkActive="active"
             class="nav-link">
             <pa-icon name="label"></pa-icon>
-            <span class="nav-link-title">{{ 'resource.classification' | translate }}</span>
+            <span class="nav-link-title">{{ 'stash.side.classification' | translate }}</span>
           </a>
           <a
             *ngIf="isEntitiesEnabled | async"
