--- a/apps/dashboard/src/app/resources/edit/annotation/paragraph-annotation/paragraph-annotation.component.scss
+++ b/apps/dashboard/src/app/resources/edit/annotation/paragraph-annotation/paragraph-annotation.component.scss
@@ -12,10 +12,54 @@
   overflow: auto;
 
   .paragraph-container {
-    margin-bottom: rhythm(2);
+    position: relative;
 
     p {
       margin-bottom: 0;
+
+      ::ng-deep mark {
+        background: $color-neutral-lighter;
+        cursor: default;
+        padding: 0 rhythm(0.25);
+      }
+
+      &.family-selected ::ng-deep mark {
+        cursor: pointer;
+      }
+    }
+
+    .annotation-buttons-container {
+      display: inline-flex;
+      height: rhythm(2);
+      position: relative;
+
+      .annotation-button {
+        align-items: center;
+        border: none;
+        color: $color-light-stronger;
+        cursor: pointer;
+        display: flex;
+        justify-content: center;
+        height: rhythm(2);
+        width: rhythm(2);
+
+        pa-icon {
+          display: flex;
+        }
+
+        &.remove {
+          background: $color-dark-stronger;
+          &:hover {
+            background: lighten($color-dark-stronger, 25%);
+          }
+        }
+        &.confirm {
+          background: $color-primary-regular;
+          &:hover {
+            background: $color-primary-light;
+          }
+        }
+      }
     }
   }
 }
@@ -29,6 +73,11 @@
   top: calc(var(--app-topbar-height) + #{$height-header} + #{$padding-top-page-container});
   right: $padding-horizontal-header;
   width: rhythm(32);
+
+  .help {
+    display: flex;
+    gap: rhythm(0.5);
+  }
 
   pa-expander ::ng-deep .pa-expander-header {
     padding-left: rhythm(1);
