--- a/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
+++ b/apps/dashboard/src/app/resources/sample-dataset/dataset-import.component.html
@@ -1,29 +1,18 @@
 <div class="dataset-import-container">
   <h1>{{ 'onboarding.dataset.title' | translate }}</h1>
-  <!-- TODO: uncomment once nucliaDB stories from https://app.shortcut.com/flaps/epic/3374/exporting-binaries?cf_workflow=500000025&ct_workflow=all are done -->
+  <h2>{{ 'onboarding.dataset.option1' | translate }}</h2>
+  <p class="body-m">
+    {{ 'onboarding.dataset.option1.description' | translate }}
+  </p>
 
-  <!--  <p class="body-m">-->
-  <!--    {{ 'onboarding.dataset.description' | translate }}-->
-  <!--  </p>-->
-
-  <!--  <div class="dataset-picker">-->
-  <!--    <pa-select-->
-  <!--      label="Pick a sample dataset"-->
-  <!--      [options]="sampleDatasets"-->
-  <!--      (valueChange)="selectDataset = $event"></pa-select>-->
-
-  <!--    <pa-button-->
-  <!--      [disabled]="!selectDataset || importing"-->
-  <!--      (click)="importDataset()">-->
-  <!--      {{ 'onboarding.dataset.import' | translate }}-->
-  <!--    </pa-button>-->
-  <!--  </div>-->
+  <app-dataset-selector></app-dataset-selector>
 
   <div class="upload-data">
+    <h2>{{ 'onboarding.dataset.option2' | translate }}</h2>
     <p
       class="body-m"
       #uploadLinksContainer>
-      {{ 'onboarding.dataset.upload-links' | translate }}
+      {{ 'onboarding.dataset.option2.description' | translate }}
     </p>
     <app-upload-button (uploaded)="onUpload()"></app-upload-button>
   </div>
