do not disable connector form if it has been pre-filled

--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -64,7 +64,7 @@
         qa="validate"
         type="submit"
         kind="primary"
-        [disabled]="form.invalid || form.pristine">
+        [disabled]="form.invalid">
         {{ (type === 'sources' ? 'generic.next' : 'Upload') | translate }}
       </pa-button>
     </div>
