Fix spacing on onboarding + user-container layout
- Add input to align user-container content on top on "small" screens
- Setup vertical scrolling when needed on user-container
- Reduce the spacing on onboarding form

--- a/libs/common/src/lib/user/onboarding/onboarding.component.html
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.html
@@ -1,4 +1,4 @@
-<stf-user-container>
+<stf-user-container alignTopOnSmallScreens="">
   <div class="onboarding-container">
     <ng-container *ngIf="!(onboardingStatus | async)?.creating; else settingUp">
       <header>
