--- a/libs/common/src/lib/user/user-container/user-container.component.html
+++ b/libs/common/src/lib/user/user-container/user-container.component.html
@@ -6,6 +6,7 @@
   </div>
   <div
     class="user-container"
+    [class.top-aligned-small]="alignTopOnSmallScreens"
     [class.left-aligned]="alignLeft">
     <ng-content></ng-content>
   </div>
