--- a/libs/common/src/lib/user/user-container/user-container.component.scss
+++ b/libs/common/src/lib/user/user-container/user-container.component.scss
@@ -19,10 +19,19 @@
     background: $color-light-stronger;
     display: flex;
     height: 100%;
+    max-height: 100vh;
+    overflow-y: auto;
     width: 50%;
 
     &:not(.left-aligned) {
       justify-content: center;
     }
+  }
+}
+
+@media (max-height: $height-viewport-medium-max) {
+  .user-background .user-container.top-aligned-small {
+    align-items: start;
+    padding-top: rhythm(10);
   }
 }
