--- a/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.scss
+++ b/apps/dashboard/src/app/knowledge-box/knowledge-box-process/knowledge-box-processes.component.scss
@@ -3,7 +3,7 @@
 .knowledge-box-processes {
   width: 770px;
   max-width: 100%;
-  margin: rythm(2.5) 0 rythm(6) 0;
+  padding: rhythm(6) rhythm(12);
 
   section {
     padding: rythm(4) 0;
