Add job title in onboarding

--- a/libs/common/src/lib/user/onboarding/onboarding.component.html
+++ b/libs/common/src/lib/user/onboarding/onboarding.component.html
@@ -36,6 +36,17 @@
         <div class="field">
           <label
             class="title-s"
+            for="jobTitle">
+            {{ 'onboarding.job-title' | translate }}
+          </label>
+          <pa-input
+            formControlName="jobTitle"
+            externalLabel
+            [errorMessages]="validationMessages.jobTitle"></pa-input>
+        </div>
+        <div class="field">
+          <label
+            class="title-s"
             for="phoneNumber">
             {{ 'onboarding.phone' | translate }}
           </label>
