refactor gdrive and gcs

--- a/apps/desktop/src/app/connectors/connectors.component.html
+++ b/apps/desktop/src/app/connectors/connectors.component.html
@@ -23,6 +23,12 @@
         [formControlName]="field.id">
         {{ field.label | translate }}
       </pa-input>
+      <pa-textarea
+        *ngIf="field.type === 'textarea'"
+        [help]="field.help | translate"
+        [formControlName]="field.id">
+        {{ field.label | translate }}
+      </pa-textarea>
 
       <div
         *ngIf="field.type === 'select'"
