--- a/apps/desktop/src/app/upload/select-files/select-files.component.html
+++ b/apps/desktop/src/app/upload/select-files/select-files.component.html
@@ -27,7 +27,7 @@
     class="body"
     #scroll>
     <table>
-      <tr *ngFor="let resource of items">
+      <tr *ngFor="let resource of resources | async">
         <td>
           <pa-checkbox
             [value]="selection.isSelected(resource)"
