--- a/apps/desktop/src/app/app.component.html
+++ b/apps/desktop/src/app/app.component.html
@@ -1,3 +1,8 @@
 <router-outlet></router-outlet>
 <nde-login *ngIf="!isAuthenticated"></nde-login>
 <div class="version">Version: {{ version }}</div>
+<aside id="pa-toasts-block">
+  <div class="pa-toasts-container">
+    <div #toastsContainer></div>
+  </div>
+</aside>
