disable admin features if only contrib

--- a/apps/dashboard/src/app/components/navbar/navbar.component.html
+++ b/apps/dashboard/src/app/components/navbar/navbar.component.html
@@ -67,7 +67,7 @@
             [routerLink]="kbUrl + '/manage'"
             routerLinkActive="active"
             class="nav-link"
-            [class.disabled]="!(isAdminOrContrib | async)">
+            [class.disabled]="!(isAdmin | async)">
             <pa-icon name="settings"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.settings' | translate }}</span>
           </a>
@@ -79,7 +79,7 @@
             [routerLink]="kbUrl + '/processes'"
             routerLinkActive="active"
             class="nav-link"
-            [class.disabled]="!(isAdminOrContrib | async)">
+            [class.disabled]="!(isAdmin | async)">
             <pa-icon name="submenu"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.trainings' | translate }}</span>
           </a>
@@ -104,7 +104,7 @@
             [routerLink]="kbUrl + '/widget-generator'"
             routerLinkActive="active"
             class="nav-link"
-            [class.disabled]="!(isAdminOrContrib | async)">
+            [class.disabled]="!(isAdmin | async)">
             <pa-icon name="widget"></pa-icon>
             <span class="nav-link-title">{{ 'stash.side.widgets' | translate }}</span>
           </a>
