Fix error view on resource list
 - Display only resources processed at least once on processed page, even if processing failed or if processing is happening again
 - On processing and failure views, filter resources by status
 - Fix Classification column title

--- a/apps/dashboard/src/app/resources/resource-list.component.html
+++ b/apps/dashboard/src/app/resources/resource-list.component.html
@@ -224,7 +224,7 @@
           <th
             cdk-header-cell
             *cdkHeaderCellDef>
-            {{ 'resource.classification' | translate }}
+            {{ 'resource.classification-column' | translate }}
           </th>
           <td
             cdk-cell
